package internal

import (
	"context"
	"fmt"

	pb "rag/pkg/rag"
)

// RagServer реализует RagService
type RagServer struct {
	pb.UnimplementedRagServiceServer
}

// NewRagServer создает новый экземпляр RagServer
func NewRagServer() *RagServer {
	return &RagServer{}
}

// AddDocument добавляет документ в индекс
func (s *RagServer) AddDocument(ctx context.Context, req *pb.AddDocumentRequest) (*pb.AddDocumentResponse, error) {
	// TODO: Реализовать добавление документа в индекс
	return &pb.AddDocumentResponse{
		Success: false,
		Message: "Метод AddDocument не реализован",
	}, fmt.Errorf("метод AddDocument не реализован")
}

// SearchDocuments выполняет поиск документов
func (s *RagServer) SearchDocuments(ctx context.Context, req *pb.SearchRequest) (*pb.SearchResponse, error) {
	// TODO: Реализовать поиск документов
	return &pb.SearchResponse{
		Results:    []*pb.DocumentResult{},
		TotalFound: 0,
	}, fmt.Errorf("метод SearchDocuments не реализован")
}

// GetDocument получает документ по ID
func (s *RagServer) GetDocument(ctx context.Context, req *pb.GetDocumentRequest) (*pb.GetDocumentResponse, error) {
	// TODO: Реализовать получение документа по ID
	return &pb.GetDocumentResponse{
		Document: nil,
		Found:    false,
	}, fmt.Errorf("метод GetDocument не реализован")
}

// DeleteDocument удаляет документ по ID
func (s *RagServer) DeleteDocument(ctx context.Context, req *pb.DeleteDocumentRequest) (*pb.DeleteDocumentResponse, error) {
	// TODO: Реализовать удаление документа по ID
	return &pb.DeleteDocumentResponse{
		Success: false,
		Message: "Метод DeleteDocument не реализован",
	}, fmt.Errorf("метод DeleteDocument не реализован")
}

// GetIndexStats получает статистику индекса
func (s *RagServer) GetIndexStats(ctx context.Context, req *pb.GetIndexStatsRequest) (*pb.GetIndexStatsResponse, error) {
	// TODO: Реализовать получение статистики индекса
	return &pb.GetIndexStatsResponse{
		TotalDocuments: 0,
		IndexSizeBytes: 0,
		LastUpdated:    "",
	}, fmt.Errorf("метод GetIndexStats не реализован")
}
